crates/apollo-compiler/test_data/diagnostics/0059_root_operation_object_type.txt
Error: `SomeInterface` field must return an object type
   ╭─[0059_root_operation_object_type.graphql:2:12]
   │
 2 │     query: SomeInterface
   │            ──────┬──────  
   │                  ╰──────── this is an interface
   │ 
   │ Help: Root operation type must be an object type.
───╯

